[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-worldedit"
version = "2.0.0"
description = "A WorldEdit-like plugin for Endstone."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "endstone",
    "nbtlib"
]

[project.entry-points."endstone"]
"worldedit" = "endstone_worldedit.plugin:WorldEditPlugin"
